CKAD/services_and_networks/ingress/default-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
spec:
  type: NodePort
  selector:
    name: 404-web-app
  ports:
  - targetPort: 80
    port: 80
    name: http
