CKAD/services_and_networks/ingress/nginx-ingress-deployment-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  selector:
    name: nginx-ingress
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: tcp
      name: http
    - port: 443
      targetPort: 443
      protocol: tcp
      name: https
