CKAD/services_and_networks/ingress/nginx-ingress-by-host-2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-by-url
spec:
  tls:
    - hosts:
      - baz.foo.com
      - bar.fizz.com
      secretName: example-secret
  rules:
    - host: baz.foo.com
      http:
        paths:
        - path: /foo-subsite1
          pathType: Exact
          backend:
            service:
              name: foo-app-service
              port:
                number: 80
        - path: /bar-subsite1
          pathType: Exact
          backend:
            service:
              name: foo-app-service
              port:
                number: 80
    - host: fizz.bar.com
      http:
        paths:
        - path: /bar-app-subsite1
          pathType: Exact
          backend:
            service:
              name: bar-app-service
              port:
                number: 80
        - path: /bar-app-subsite2
          pathType: Exact
          backend:
            service:
              name: bar-app-service
              port:
                number: 80
