CKAD/services_and_networks/ingress/nginx-ingress-by-host.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-by-host
spec:
  tls:
  - hosts:
      - foo.website.com
      - bar.website.com
    secretName: example-secret
  rules:
  - host: foo.website.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo-app-service
            port:
              number: 80
  - host: bar.website.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bar-app-service
            port:
              number: 80
