CKAD/services_and_networks/ingress/nginx-ingress-by-service.yml
apiVersion: extentions/v1beta1 # this is unique to nginx, might vary for other controllers
kind: Ingress
metadata:
  name: ingress-frontend-app
spec:
  backend:
    serviceName: fromtend-app-service
    servicePort: 80
